# calchours

./: .gitignore  Makefile.am  README.md  calchr00.c  configure.ac
database/: Makefile.am  hoursdb.sql
doc/: Makefile.am  calchours.texi  intro.texi  invoking.texi
src/: 00INFO  Makefile.am  calchours.web  calchrs01.web  cmdlnopt.web  hours.01.2014.txt  hours.12.2013.txt  prbsnflx.l++  scanner.web  timespec.web
